Redesign modifications with branch status (#67)
Signed-off-by: Slimane AMAR <slimane.amar@rte-france.com>