@@ -26,11 +26,7 @@ import org.springframework.beans.factory.annotation.Qualifier;
 import org.springframework.boot.test.autoconfigure.web.reactive.AutoConfigureWebTestClient;
 import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.http.HttpEntity;
-import org.springframework.http.HttpMethod;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.MediaType;
-import org.springframework.http.ResponseEntity;
+import org.springframework.http.*;
 import org.springframework.test.context.junit4.SpringRunner;
 import org.springframework.test.web.reactive.server.WebTestClient;
 import org.springframework.web.client.RestTemplate;
@@ -39,12 +35,13 @@ import org.springframework.web.reactive.function.BodyInserters;
 
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
-import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
 import java.util.Set;
 import java.util.UUID;
 
+import static org.gridsuite.modification.server.NetworkModificationException.BAD_BRANCH_ACTION;
+import static org.gridsuite.modification.server.NetworkModificationException.EMPTY_BRANCH_ACTION;
 import static org.gridsuite.modification.server.NetworkModificationException.Type.*;
 import static org.junit.Assert.*;
 import static org.mockito.ArgumentMatchers.argThat;
@@ -235,7 +232,7 @@ public class ModificationControllerTest {
             .expectHeader().contentType(MediaType.APPLICATION_JSON)
             .expectBodyList(EquipmenAttributeModificationInfos.class)
             .value(modifications -> modifications.get(0),
-                MatcherEquipmentAttributeModificationInfos.createMatcherEquipmentAttributeModificationInfos(switchId1, Collections.emptySet(), "open", false));
+                MatcherEquipmentAttributeModificationInfos.createMatcherEquipmentAttributeModificationInfos(switchId1, Set.of(), "open", false));
 
         // switch opening
         webTestClient.put().uri(uriString + "&open=true", TEST_NETWORK_ID, switchId1)
@@ -291,126 +288,125 @@ public class ModificationControllerTest {
     }
 
     @Test
-    public void testLine() {
+    public void testLineStatusMofification() {
+        String uriString = "/v1/networks/{networkUuid}/lines/{lineId}/status?group=" + TEST_GROUP_ID;
+
+        // line lockout
+        webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line2")
+            .bodyValue("lockout")
+            .exchange()
+            .expectStatus().isOk()
+            .expectHeader().contentType(MediaType.APPLICATION_JSON)
+            .expectBodyList(BranchStatusModificationInfos.class)
+            .value(modifications -> modifications.get(0),
+                MatcherBranchStatusModificationInfos.createMatcherBranchStatusModificationInfos(BranchStatusModificationInfos.ActionType.LOCKOUT, Set.of("s1", "s2")));
+
+        // line switch on (already switched on)
+        webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line2")
+            .bodyValue("switch_on")
+            .exchange()
+            .expectStatus().isOk()
+            .expectHeader().contentType(MediaType.APPLICATION_JSON)
+            .expectBodyList(BranchStatusModificationInfos.class)
+            .value(modifications -> modifications.get(0),
+                MatcherBranchStatusModificationInfos.createMatcherBranchStatusModificationInfos(BranchStatusModificationInfos.ActionType.SWITCH_ON, Set.of()));
+
+        // line trip
+        webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line2")
+            .bodyValue("trip")
+            .exchange()
+            .expectStatus().isOk()
+            .expectHeader().contentType(MediaType.APPLICATION_JSON)
+            .expectBodyList(BranchStatusModificationInfos.class)
+            .value(modifications -> modifications.get(0),
+                MatcherBranchStatusModificationInfos.createMatcherBranchStatusModificationInfos(BranchStatusModificationInfos.ActionType.TRIP, Set.of("s1", "s2")));
+
+        // line energise on one end
+        webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line2")
+            .bodyValue("energise_end_one")
+            .exchange()
+            .expectStatus().isOk()
+            .expectHeader().contentType(MediaType.APPLICATION_JSON)
+            .expectBodyList(BranchStatusModificationInfos.class)
+            .value(modifications -> modifications.get(0),
+                MatcherBranchStatusModificationInfos.createMatcherBranchStatusModificationInfos(BranchStatusModificationInfos.ActionType.ENERGISE_END_ONE, Set.of("s2")));
+
+        // line energise on other end
+        webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line2")
+            .bodyValue("energise_end_two")
+            .exchange()
+            .expectStatus().isOk()
+            .expectHeader().contentType(MediaType.APPLICATION_JSON)
+            .expectBodyList(BranchStatusModificationInfos.class)
+            .value(modifications -> modifications.get(0),
+                MatcherBranchStatusModificationInfos.createMatcherBranchStatusModificationInfos(BranchStatusModificationInfos.ActionType.ENERGISE_END_TWO, Set.of("s1")));
+
+        testNetworkModificationsCount(TEST_GROUP_ID, 5);
+    }
+
+    @Test
+    public void testLineStatusMofificationWithErrors() {
         String uriString = "/v1/networks/{networkUuid}/lines/{lineId}/status?group=" + TEST_GROUP_ID;
 
         // network not existing
         webTestClient.put().uri(uriString, NOT_FOUND_NETWORK_ID, "line2")
-                .bodyValue("lockout")
-                .exchange()
-                .expectStatus().isNotFound()
-                .expectBody(String.class)
-                .isEqualTo(new NetworkModificationException(NETWORK_NOT_FOUND, NOT_FOUND_NETWORK_ID.toString()).getMessage());
+            .bodyValue("lockout")
+            .exchange()
+            .expectStatus().isNotFound()
+            .expectBody(String.class)
+            .isEqualTo(new NetworkModificationException(NETWORK_NOT_FOUND, NOT_FOUND_NETWORK_ID.toString()).getMessage());
 
         // line not existing
         webTestClient.put().uri(uriString, TEST_NETWORK_ID, "notFound")
-                .bodyValue("lockout")
-                .exchange()
-                .expectStatus().isNotFound()
-                .expectBody(String.class)
-                .isEqualTo(new NetworkModificationException(LINE_NOT_FOUND, "notFound").getMessage());
+            .bodyValue("lockout")
+            .exchange()
+            .expectStatus().isNotFound()
+            .expectBody(String.class)
+            .isEqualTo(new NetworkModificationException(LINE_NOT_FOUND, "notFound").getMessage());
 
-        // line lockout
+        // modification action empty
         webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line2")
-                .bodyValue("lockout")
-                .exchange()
-                .expectStatus().isOk()
-                .expectHeader().contentType(MediaType.APPLICATION_JSON)
-                .expectBodyList(EquipmenAttributeModificationInfos.class);
-        // TODO :
-        //  when line operations will be redesigned, remove this comment and only one modification will be returned
+            .bodyValue("")
+            .exchange()
+            .expectStatus().isBadRequest()
+            .expectBody(String.class)
+            .isEqualTo(new NetworkModificationException(BRANCH_ACTION_EMPTY, EMPTY_BRANCH_ACTION).getMessage());
 
-//                .value(modifications -> modifications.get(0),
-//                        MatcherEquipmentAttributeModificationInfos.createMatcherEquipmentAttributeModificationInfos("v1bl1", Set.of("s1"), "open", true))
-//                .value(modifications -> modifications.get(1),
-//                        MatcherEquipmentAttributeModificationInfos.createMatcherEquipmentAttributeModificationInfos("v3bl1", Set.of("s2"), "open", true))
-//                .value(modifications -> modifications.get(2),
-//                        MatcherEquipmentAttributeModificationInfos.createMatcherEquipmentAttributeModificationInfos("line2", Set.of("s1", "s2"), "branchStatus", BranchStatus.Status.PLANNED_OUTAGE.name()));
+        // modification action not existing
+        webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line2")
+            .bodyValue("foo")
+            .exchange()
+            .expectStatus().isBadRequest()
+            .expectBody(String.class)
+            .isEqualTo(new NetworkModificationException(BRANCH_ACTION_BAD, BAD_BRANCH_ACTION).getMessage());
 
         webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line3")
-                .bodyValue("lockout")
-                .exchange()
-                .expectStatus().is5xxServerError()
-                .expectBody(String.class)
-                .isEqualTo(new NetworkModificationException(MODIFICATION_ERROR, "Unable to disconnect both line ends").getMessage());
-
-        // line switch on
-        webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line2")
-                .bodyValue("switchOn")
-                .exchange()
-                .expectStatus().isOk()
-                .expectHeader().contentType(MediaType.APPLICATION_JSON)
-                .expectBodyList(EquipmenAttributeModificationInfos.class)
-                .isEqualTo(List.of());
-
-        // line trip
-        webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line2")
-                .bodyValue("trip")
-                .exchange()
-                .expectStatus().isOk()
-                .expectHeader().contentType(MediaType.APPLICATION_JSON)
-                .expectBodyList(EquipmenAttributeModificationInfos.class);
-        // TODO :
-        //  when line operations will be redesigned, remove this comment and only one modification will be returned
-
-//                .value(modifications -> modifications.get(0),
-//                        MatcherEquipmentAttributeModificationInfos.createMatcherEquipmentAttributeModificationInfos("v1bl1", Set.of("s1"), "open", true))
-//                .value(modifications -> modifications.get(1),
-//                        MatcherEquipmentAttributeModificationInfos.createMatcherEquipmentAttributeModificationInfos("v3bl1", Set.of("s2"), "open", true))
-//                .value(modifications -> modifications.get(2),
-//                        MatcherEquipmentAttributeModificationInfos.createMatcherEquipmentAttributeModificationInfos("line2", Set.of("s1", "s2"), "branchStatus", BranchStatus.Status.FORCED_OUTAGE.name()));
+            .bodyValue("lockout")
+            .exchange()
+            .expectStatus().isBadRequest()
+            .expectBody(String.class)
+            .isEqualTo(new NetworkModificationException(BRANCH_ACTION_ERROR, "Unable to disconnect both line ends").getMessage());
 
         webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line3")
-                .bodyValue("trip")
-                .exchange()
-                .expectStatus().is5xxServerError()
-                .expectBody(String.class)
-                .isEqualTo(new NetworkModificationException(MODIFICATION_ERROR, "Unable to disconnect both line ends").getMessage());
-
-        // line energise on one end
-        webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line2")
-                .bodyValue("energiseEndOne")
-                .exchange()
-                .expectStatus().isOk()
-                .expectHeader().contentType(MediaType.APPLICATION_JSON)
-                .expectBodyList(EquipmenAttributeModificationInfos.class);
-        // TODO :
-        //  when line operations will be redesigned, remove this comment and only one modification will be returned
-
-//                .value(modifications -> modifications.get(0),
-//                        MatcherEquipmentAttributeModificationInfos.createMatcherEquipmentAttributeModificationInfos("v3bl1", Set.of("s2"), "open", true));
+            .bodyValue("trip")
+            .exchange()
+            .expectStatus().isBadRequest()
+            .expectBody(String.class)
+            .isEqualTo(new NetworkModificationException(BRANCH_ACTION_ERROR, "Unable to disconnect both line ends").getMessage());
 
         webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line3")
-                .bodyValue("energiseEndOne")
-                .exchange()
-                .expectStatus().is5xxServerError()
-                .expectBody(String.class)
-                .isEqualTo(new NetworkModificationException(MODIFICATION_ERROR, "Unable to energise line end").getMessage());
-
-        // line energise on other end
-        webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line2")
-                .bodyValue("energiseEndTwo")
-                .exchange()
-                .expectStatus().isOk()
-                .expectHeader().contentType(MediaType.APPLICATION_JSON)
-                .expectBodyList(EquipmenAttributeModificationInfos.class);
-        // TODO :
-        //  when line operations will be redesigned, remove this comment and only one modification will be returned
-
-//                .value(modifications -> modifications.get(0),
-//                        MatcherEquipmentAttributeModificationInfos.createMatcherEquipmentAttributeModificationInfos("v1bl1", Set.of("s1"), "open", true));
+            .bodyValue("energise_end_one")
+            .exchange()
+            .expectStatus().isBadRequest()
+            .expectBody(String.class)
+            .isEqualTo(new NetworkModificationException(BRANCH_ACTION_ERROR, "Unable to energise line end").getMessage());
 
         webTestClient.put().uri(uriString, TEST_NETWORK_ID, "line3")
-                .bodyValue("energiseEndTwo")
-                .exchange()
-                .expectStatus().is5xxServerError()
-                .expectBody(String.class)
-                .isEqualTo(new NetworkModificationException(MODIFICATION_ERROR, "Unable to energise line end").getMessage());
-
-        // TODO :
-        //  when line operations will be redesigned, remove this comment and check only 5 modifications have be added
-        // to the database
-        //testNetworkModificationsCount(TEST_GROUP_ID, 8);
+            .bodyValue("energise_end_two")
+            .exchange()
+            .expectStatus().isBadRequest()
+            .expectBody(String.class)
+            .isEqualTo(new NetworkModificationException(BRANCH_ACTION_ERROR, "Unable to energise line end").getMessage());
     }
 
     @Test
